--- a/trunk/src/lib/juice/Makefile
+++ b/trunk/src/lib/juice/Makefile
@@ -33,7 +33,7 @@ all: $(OBJECTS)
 ########################################################################
 # Build DLL...
 c-dlls.list := libv8-juice
-libv8-juice.DLL.VERSION := $(shell echo $(package.version) | perl -pe 's|(\d\d\d\d)(\d\d)(\d\d)|$$1.$$2.$$3|')
+libv8-juice.DLL.VERSION := $(V8JUICE_VERSION_DOTTED)
 libv8-juice.DLL.OBJECTS = $(OBJECTS)
 #libv8-juice.DLL.LDADD = $(LIBV8JUICE_LDADD) 
 #ifeq (1,$(v8juice_CONFIG_ENABLE_PLUGINS))
