--- a/trunk/src/lib/plugins/sqlite3/Makefile
+++ b/trunk/src/lib/plugins/sqlite3/Makefile
@@ -1,16 +1,5 @@
 include toc2.make
-
-package.dist_files += $(wildcard *.cpp *.cc *.h *.hpp)
-
-OBJECTS := v8-sqlite3.o
-
-########################################################################
-# Build DLL...
-c-dlls.list := v8-juice-sqlite3
-v8-juice-sqlite3.DLL.VERSION := $(V8JUICE_VERSION_DOTTED)
-v8-juice-sqlite3.DLL.OBJECTS := $(OBJECTS)
-v8-juice-sqlite3.DLL.LDADD := -lsqlite3
-include $(toc2.dirs.makefiles)/c-dlls.make
-all: $(v8-juice-sqlite3.DLL)
-# end DLL rules
-########################################################################
+PLUGIN_NAME := sqlite3
+PLUGIN_OBJECTS := v8-sqlite3.o
+PLUGIN_LDADD := -lsqlite3
+include ../plugin_template.make
