--- a/trunk/src/lib/plugins/stringstuff/Makefile
+++ b/trunk/src/lib/plugins/stringstuff/Makefile
@@ -1,4 +1,4 @@
 include toc2.make
 PLUGIN_NAME := stringstuff
-PLUGIN_OBJECTS := v8-sprintf.o
+PLUGIN_OBJECTS := v8-sprintf.o v8-strfunc.o
 include ../plugin_template.make
