--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -2,9 +2,15 @@
 
 include toc2.make
 
-#package.subdirs := lib
+ifneq (,$(strip $(filter dist testdist clean distclean uninstall install,$(MAKECMDGOALS))))
+# only build these package.subdirs when running certain targets
+      package.subdirs_FIRST += include
+endif
+
 package.subdirs_FIRST += lib
 package.subdirs_SECOND = client
+
+
 package.subdirs = $(package.subdirs_FIRST) $(package.subdirs_SECOND)
 subdirs: $(addprefix subdir-,$(package.subdirs))
 all: subdirs
