Added juice::ThrowException() and the whprintf() code to support it.

--- a/src/lib/juice/Makefile
+++ b/src/lib/juice/Makefile
@@ -8,6 +8,8 @@ OBJECTS = $(addsuffix .o,\
 	cleanup \
 	convert \
 	plugin \
+	juice \
+	whprintf \
 	)
 
 ########################################################################
