--- a/trunk/src/lib/juice/Makefile
+++ b/trunk/src/lib/juice/Makefile
@@ -8,6 +8,8 @@ OBJECTS = $(addsuffix .o,\
 	cleanup \
 	convert \
 	plugin \
+	juice \
+	whprintf \
 	)
 
 ########################################################################
