--- a/src/include/v8/juice/Makefile
+++ b/src/include/v8/juice/Makefile
@@ -1,4 +1,4 @@
 include toc2.make
-package.distclean_files += plugin-config.h
+package.distclean_files += plugin-config.h juice-config.h
 
 package.install.headers := $(wildcard *.h)
