--- a/trunk/src/Makefile
+++ b/trunk/src/Makefile
@@ -2,12 +2,12 @@
 
 include toc2.make
 
-ifneq (,$(strip $(filter dist testdist clean distclean uninstall install,$(MAKECMDGOALS))))
+#ifneq (,$(strip $(filter dist testdist clean distclean uninstall install,$(MAKECMDGOALS))))
 # only build these package.subdirs when running certain targets
-      package.subdirs_FIRST += include
-endif
+#      package.subdirs_FIRST += include
+#endif
 
-package.subdirs_FIRST += lib
+package.subdirs_FIRST += include lib
 package.subdirs_SECOND = client
 
 
@@ -15,6 +15,7 @@ package.subdirs = $(package.subdirs_FIRST) $(package.subdirs_SECOND)
 subdirs: $(addprefix subdir-,$(package.subdirs))
 all: subdirs
 #$(package.subdirs_SECOND): |$(package.subdirs_FIRST)
+subdir-lib: |subdir-include
 subdir-client: |subdir-lib
 
 #package.dist_files += $(wildcard in.*) test.cpp
