--- a/src/lib/juice/Makefile
+++ b/src/lib/juice/Makefile
@@ -18,7 +18,7 @@ OBJECTS = $(addsuffix .o,\
 c-dlls.list := libv8-juice
 libv8-juice.DLL.VERSION := $(V8JUICE_VERSION_DOTTED)
 libv8-juice.DLL.OBJECTS = $(OBJECTS)
-#libv8-juice.DLL.LDADD = $(LIBV8JUICE_LDADD) 
+libv8-juice.DLL.LDADD = $(LDADD_DL)
 #ifeq (1,$(v8juice_CONFIG_ENABLE_PLUGINS))
 #  libv8-juice.DLL.OBJECTS += plugin/plugin.o plugin/path_finder.o
 #endif
