Started work on rewriting sqlite3 plugin. This one is a hybrid of the C API and an OO interface. Still lots more work to do here.

--- a/extra-plugins/src/sqlite3/Makefile
+++ b/extra-plugins/src/sqlite3/Makefile
@@ -1,4 +1,4 @@
 PLUGIN_NAME := sqlite3
-PLUGIN_OBJECTS := v8-sqlite3.o
+PLUGIN_OBJECTS := v8-attempt2.o sq3.o
 PLUGIN_LDADD := -lsqlite3
 include ../plugin_template.make
