--- a/trunk/src/lib/plugins/whio/Makefile
+++ b/trunk/src/lib/plugins/whio/Makefile
@@ -2,6 +2,7 @@ include toc2.make
 PLUGIN_NAME := whio
 PLUGIN_OBJECTS := v8-whio.o v8-whefs.o whefs_amalgamation.o
 ifeq (1,1)
+    CPPFLAGS += -DWHDBG_CONFIG_ENABLE=0
     CPPFLAGS += -DWHIO_ENABLE_ZLIB=1
     PLUGIN_LDADD := -lz
 endif
