--- a/trunk/src/lib/juice/Makefile
+++ b/trunk/src/lib/juice/Makefile
@@ -11,6 +11,7 @@ OBJECTS = $(addsuffix .o,\
 	juice \
 	JSClassCreator \
 	whprintf \
+	jssprintf \
 	)
 
 ########################################################################
