Added JS sprintf() to the core API, because i'm gonna find it useful in several of the plugins. Had to rename sprintf.h to jssprintf.h b/c subversion won't let me resurrect a deleted filename :(

--- a/src/lib/juice/Makefile
+++ b/src/lib/juice/Makefile
@@ -11,6 +11,7 @@ OBJECTS = $(addsuffix .o,\
 	juice \
 	JSClassCreator \
 	whprintf \
+	jssprintf \
 	)
 
 ########################################################################
