--- a/toc2/bin/Makefile
+++ b/toc2/bin/Makefile
@@ -4,5 +4,4 @@ package.dist_files += atsign_parse \
 	cleanup_vars \
 	install-sh \
 	makedist \
-	removeDupeArgs \
-	mkdep-toc2.c	
+	removeDupeArgs
