moved setTimeout()/sleep() into time.{cc,h}

--- a/src/lib/juice/Makefile
+++ b/src/lib/juice/Makefile
@@ -12,6 +12,7 @@ OBJECTS = $(addsuffix .o,\
 	JSClassCreator \
 	whprintf \
 	jssprintf \
+	time \
 	)
 
 ########################################################################
