--- a/trunk/src/lib/juice/Makefile
+++ b/trunk/src/lib/juice/Makefile
@@ -12,6 +12,7 @@ OBJECTS = $(addsuffix .o,\
 	JSClassCreator \
 	whprintf \
 	jssprintf \
+	time \
 	)
 
 ########################################################################
