--- a/trunk/src/lib/juice/Makefile
+++ b/trunk/src/lib/juice/Makefile
@@ -13,6 +13,7 @@ OBJECTS = $(addsuffix .o,\
 	whprintf \
 	jssprintf \
 	time \
+	mutex \
 	)
 
 ########################################################################
