added cancelTimeout() and underlying mutex infrastructure

--- a/src/lib/juice/Makefile
+++ b/src/lib/juice/Makefile
@@ -13,6 +13,7 @@ OBJECTS = $(addsuffix .o,\
 	whprintf \
 	jssprintf \
 	time \
+	mutex \
 	)
 
 ########################################################################
