--- a/extra-plugins/SConstruct
+++ b/extra-plugins/SConstruct
@@ -22,6 +22,7 @@ v8_libdir = os.path.join(v8_home,'lib')
 v8_libname = 'v8' #or use 'v8_g'
 env = Environment(
     CPPPATH = ['#/src/include',v8_incdir],
+    CFLAGS = ['-fPIC','-std=c99'],
     LIBPATH = ['.',v8_libdir]
     )
 
@@ -37,7 +38,7 @@ def buildPlugin(name,src,ldflags = []):
 ########################################################################
 # whio plugin
 if( True ):
-    whio_use_whefs = False
+    whio_use_whefs = True
     if( whio_use_whefs ):
         my_src = [os.path.join('#/src/whio/', x) for x in [
             'v8-whio.cc',
