Added TMemFuncForwarder<> class.

--- a/branches/edge/src/include/v8/juice/Makefile
+++ b/branches/edge/src/include/v8/juice/Makefile
@@ -74,6 +74,7 @@ $(1): $(1)-$(2).h
 clean-$(1): genclean-$(1)-$(2)
 endef
 $(eval $(call Forwarder.GenCode,forwarding,MemFuncForwarder))
+$(eval $(call Forwarder.GenCode,forwarding,TMemFuncForwarder))
 $(eval $(call Forwarder.GenCode,forwarding,FunctorForwarder))
 $(eval $(call Forwarder.GenCode,forwarding,FunctionForwarder))
 
