--- a/trunk/src/include/v8/juice/Makefile
+++ b/trunk/src/include/v8/juice/Makefile
@@ -74,7 +74,9 @@ $(1): $(1)-$(2).h
 clean-$(1): genclean-$(1)-$(2)
 endef
 $(eval $(call Forwarder.GenCode,forwarding,MemFuncForwarder))
+$(eval $(call Forwarder.GenCode,forwarding,TMemFuncForwarder))
 $(eval $(call Forwarder.GenCode,forwarding,FunctorForwarder))
 $(eval $(call Forwarder.GenCode,forwarding,FunctionForwarder))
+$(eval $(call Forwarder.GenCode,forwarding,CtorForwarder))
 
 package.install.headers := $(wildcard *.h)
