Ported PathFinder class to use the new ClassWrap binding mechanism. "Should" (and appears to) work identically to the older binding.

--- a/branches/edge/src/lib/juice/Makefile
+++ b/branches/edge/src/lib/juice/Makefile
@@ -4,7 +4,7 @@ HEADERS =
 
 OBJECTS = $(addsuffix .o,\
 	PathFinder \
-	PathFinder-js \
+	PathFinder-cw \
 	cleanup \
 	convert \
 	plugin \
@@ -16,6 +16,7 @@ OBJECTS = $(addsuffix .o,\
 	time \
 	mutex \
 	)
+#	PathFinder-js
 
 ########################################################################
 # Build DLL...
