committing this severely broken code for historical reference before i gut it.

--- a/extra-plugins/src/curl/Makefile
+++ b/extra-plugins/src/curl/Makefile
@@ -1,4 +1,6 @@
+CURL_PREFIX := $(HOME)
 PLUGIN_NAME := libcurl
 PLUGIN_OBJECTS := CurlJS.o
-PLUGIN_LDADD := -lcurl
+PLUGIN_LDADD := -L$(CURL_PREFIX)/lib -lcurl
+CPPFLAGS += -I$(CURL_PREFIX)/include
 include ../plugin_template.make
