--- a/extra-plugins/src/ncurses/Makefile
+++ b/extra-plugins/src/ncurses/Makefile
@@ -1,4 +1,5 @@
-$(error do not use this plugin - it is sorely broken. Use ../ncurses-oo instead!)
+#!/usr/bin/make -f
+$(warning do not use this plugin - it is sorely broken. Use ../ncurses-oo instead!)
 PLUGIN_NAME := ncurses
 PLUGIN_OBJECTS := nccolors.o ncmode.o ncstream.o v8-ncurses.o
 PLUGIN_LDADD := -lpanel -lncurses
