Added v8::convert spin-off project to svn.

--- a/extra-plugins/SConstruct
+++ b/extra-plugins/SConstruct
@@ -32,7 +32,7 @@ def buildPlugin(name,src,ldflags = []):
     env.SharedLibrary( target = 'v8-juice-'+name,
                        SHLIBPREFIX = '',
                        LIBS = ldflags,
-                       source = src,
+                       source = src
                  )
 
 ########################################################################
