Refactored to use shell-common.make

--- a/convert/addons/jspdo/Makefile
+++ b/convert/addons/jspdo/Makefile
@@ -105,20 +105,9 @@ $(OBJS_NEEDING_DB_CPPFLAGS): CPPFLAGS+=-DCPDO_ENABLE_MYSQL5=$(CPDO_ENABLE_MYSQL5
 LDFLAGS_JSPDO := -L. -ljspdo
 BINS_LDFLAGS += $(LDFLAGS_V8) $(LDFLAGS_JSPDO) #$(LDFLAGS_DRIVERS)
 
-ifeq (1,1)
-  SHELL.DIR := ../shell-skel
-  shell.cpp: $(SHELL.DIR)/shell.cpp
-	cp $< $@
-  CLEAN_FILES += shell.cpp
-  shell.BIN.OBJECTS := shell.o
-  shell.BIN.LDFLAGS += $(BINS_LDFLAGS)
-  $(eval $(call ShakeNMake.CALL.RULES.BINS,shell))
-  shell.o: shell.cpp $(ALL_MAKEFILES)
-  shell.o: CPPFLAGS+=-DSETUP_SHELL_BINDINGS=jspdo::SetupV8Bindings
-  shell.o: CPPFLAGS+=-DINCLUDE_SHELL_BINDINGS='"jspdo.hpp"'
-  $(shell.BIN): $(libjspdo.DLL)
-  all: $(shell.BIN)
-endif
+SHELL_BINDINGS_HEADER := jspdo.hpp
+SHELL_BINDINGS_FUNC := jspdo::SetupV8Bindings
+include ../shell-common.make
 
 .PHONY: amal-cpp
 amal-cpp: cpdo_amalgamation.o
