Minor refactoring to simplify re-use in other add-ons.

--- a/convert/addons/bytearray/Makefile
+++ b/convert/addons/bytearray/Makefile
@@ -41,5 +41,5 @@ BINS_LDFLAGS += $(LDFLAGS_V8) $(LDFLAGS_JSPDO) #$(LDFLAGS_DRIVERS)
 
 
 SHELL_BINDINGS_HEADER := bytearray.hpp
-SHELL_BINDINGS_FUNC := SetupJSByteArray
+SHELL_BINDINGS_FUNC := v8::convert::JSByteArray::SetupBindings
 include ../shell-common.make
